--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -8,21 +8,21 @@
   </head>
   <body>
   
-  <table height="230px" background="headerImg.jpg">
+  <table width="100%" height="230px" background="headerImg.jpg">
     <tr>
+        <td colspan="3" style="font-size: 4em; color:white; font-weight: bold; text-align: center" valign="bottom">Bithdays Blow...</td>
         <td colspan="3"></td>
-        <td colspan="3" style="font-size: 4em; color:white; font-weight: bold" valign="bottom">Bithdays Blow</td>
     </tr>
     <tr>
         <td colspan="2"></td>
-        <td colspan="4" style="font-size: 1.3em;color:white; font-weight: bold;" valign="top">The truth you've been lied about</td>
+        <td colspan="4" style="font-size:1.3em;color:white; font-weight: bold; padding-top: 1em" valign="top">The truth you've been lied about</td>
     </tr>
     <tr>
-        <td width="400px"></td>
-        <td width="70px; color: white"><a href="#">HOME</a></td>
-        <td width="120px; color: white"><a href="#">PAST EXPERIENCES</a></td>
-        <td width="120px; color: white"><a href="#">JOKES</a></td>
-        <td width="80px; color: white"><a href="#">PHOTOS</a></td>
+        <td width="600px"></td>
+        <td width="70px"><a href="#">HOME</a></td>
+        <td width="120px"><a href="#">PAST EXPERIENCES</a></td>
+        <td width="120px"><a href="#">JOKES</a></td>
+        <td width="80px"><a href="#">PHOTOS</a></td>
         <td ><input type="search" placeholder="search"></td>
     </tr>
 </table>
