added line breaks with the side content

--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -44,7 +44,7 @@
 <div id="news">
     <div class="news-article">
         <h3>I TRIED</h3>
-        <p>A couple have not been getting along for years, so the husband thinks, “I’ll buy my wife a cemetery plot for her birthday.” Well, you can imagine her disappointment.<BR>The next year, her birthday rolls around again and this time he doesn’t get her anything.<BR>She says, “Why didn’t you get me a birthday present!?” He replies, “You didn’t use what I got you last year!”</p>
+        <p>A couple have not been getting along for years, so the husband thinks, “I’ll buy my wife a cemetery plot for her birthday.” Well, you can imagine her disappointment.<br><br>The next year, her birthday rolls around again and this time he doesn’t get her anything.<br><br>She says, “Why didn’t you get me a birthday present!?” He replies, “You didn’t use what I got you last year!”</p>
     </div>
     <div class="news-article">
         <h3>Second news article header</h3>
