added a second side article with line break tags

--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -47,8 +47,8 @@
         <p>A couple have not been getting along for years, so the husband thinks, “I’ll buy my wife a cemetery plot for her birthday.” Well, you can imagine her disappointment.<br><br>The next year, her birthday rolls around again and this time he doesn’t get her anything.<br><br>She says, “Why didn’t you get me a birthday present!?” He replies, “You didn’t use what I got you last year!”</p>
     </div>
     <div class="news-article">
-        <h3>Second news article header</h3>
-        <p>Second news article body</p>
+        <h3>Even My Boss Gets PISSed</h3>
+        <p>Some employees bought their boss a gift for his birthday. Before opening the gift, the boss shook it slightly, and noticed that it was wet in the corner. Touching his finger to the wet spot and tasting it, he asked, “A bottle of wine?”<br><br>His employees replied, “No.”<br><br>Again, he touched his finger to the box and tasted the liquid. “A bottle of scotch?”<br><br>“His employees replied again, “No.”<br><br>Finally the boss asked, “I give up. What is it?”<br><br>His workers responded, “A puppy.”</p>
     </div>
 </div>
 
