header fon-family=cursive

--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -11,12 +11,12 @@
   
   <table width="100%" height="230px" background="headerImg.jpg">
     <tr>
-        <td colspan="3" style="font-size: 4em; color:white; font-weight: bold; text-align: center" valign="bottom">Bithdays Blow...</td>
+        <td colspan="3" style="font-size: 4em; color:white;font-family: cursive; font-weight: bold; text-align: center" valign="bottom">Bithdays Blow...</td>
         <td colspan="3"></td>
     </tr>
     <tr>
         <td colspan="2"></td>
-        <td colspan="4" style="font-size:1.3em;color:white; font-weight: bold; padding-top: 1em" valign="top">The truth you've been lied about</td>
+        <td colspan="4" style="font-size:1.3em;color:white;font-family: cursive; font-weight: bold; padding-top: 1em" valign="top">The truth you've been lied about</td>
     </tr>
     <tr>
         <td width="600px"></td>
@@ -36,8 +36,10 @@
     </div>
     <div class="article">
         <h2>When Were You Born AGAIN????</h2>
-        <img class="floatLeft" width="300px" height="300px"src="cakeInTheFace.jpg">
-        <p>From my earliest memories, my mother never remembered my birthday. At the beginning of my birthday month, every single year for decades, she would would say, "When were you born again? I can never remember because I was in labor with you for five days of pure hell!" Every year. For decades.</p>
+        <img class="floatLeft" width="750px" height="300px"src="cakeInTheFace.jpg">
+        <div class="pMargin">
+             <p>From my earliest memories, my mother never remembered my birthday. At the beginning of my birthday month, every single year for decades, she would would say, "When were you born again? I can never remember because I was in labor with you for five days of pure hell!" Every year. For decades.</p>
+        </div>
     </div>
 </div>
 
