--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -11,12 +11,12 @@
   
   <table width="100%" height="230px" background="headerImg.jpg">
     <tr>
-        <td colspan="3" style="font-size: 4em; color:white;font-family: cursive; font-weight: bold; text-align: center" valign="bottom">Bithdays Blow...</td>
+        <td colspan="3" style="font-size: 4em; color:white;font-family: cursive; font-weight: bold; text-align: center" valign="bottom">Birthdays Blow.........</td>
         <td colspan="3"></td>
     </tr>
     <tr>
         <td colspan="2"></td>
-        <td colspan="4" style="font-size:1.3em;color:white;font-family: cursive; font-weight: bold; padding-top: 1em" valign="top">The truth you've been lied about</td>
+        <td colspan="4" style="font-size:1.3em;color:white;font-family: cursive; font-weight: bold; padding-top: 1em" valign="top">The truth you've been lied about!</td>
     </tr>
     <tr>
         <td width="600px"></td>
@@ -30,12 +30,12 @@
 
 <div id="main-content">
     <div class="article">
-        <h2>First Shit Show</h2>
+        <h2 id="title1">First Shit Show</h2>
         <img class="floatLeft" height="220px" width="160px" src="goofy.jpg">
-        <p id="bottomPadding">On my tenth birthday, I received a total of $200 from my friends. My neighbor had those electric pocket rockets that I always wanted for myself. So me and my mom went to the store and finally bought it. But when my dad saw it later that day, he said "What the fuck is this shit?" "Return it NOW!" Eventually he returned it and kept the money for himself.</p>
+        <p id="bottomPadding">  On my tenth birthday, I received a total of $200 from my friends. My neighbor had those electric pocket rockets that I always wanted for myself. So me and my mom went to the store and finally bought it. But when my dad saw it later that day, he said "What the fuck is this shit?" "Return it NOW!" Eventually he returned it and kept the money for himself.</p>
     </div>
     <div class="article">
-        <h2>When Were You Born AGAIN????</h2>
+        <h2 id="title2">When Were You Born AGAIN????</h2>
         <img class="floatLeft" width="750px" height="300px"src="cakeInTheFace.jpg">
         <div class="pMargin">
              <p>From my earliest memories, my mother never remembered my birthday. At the beginning of my birthday month, every single year for decades, she would would say, "When were you born again? I can never remember because I was in labor with you for five days of pure hell!" Every year. For decades.</p>
@@ -46,7 +46,7 @@
 <div id="news">
     <div class="news-article">
         <h3>I TRIED</h3>
-        <p>A couple have not been getting along for years, so the husband thinks, “I’ll buy my wife a cemetery plot for her birthday.” Well, you can imagine her disappointment.<br><br>The next year, her birthday rolls around again and this time he doesn’t get her anything.<br><br>She says, “Why didn’t you get me a birthday present!?” He replies, “You didn’t use what I got you last year!”</p>
+        <p>A couple have not been getting along for years, so the husband thinks, “I’ll buy my wife a cemetery plot for her birthday.” Well, you can imagine her disappointment.<br><br>The next year, her birthday rolls around again and this time he doesn’t get her anything.<br><br>She says, “Why didn’t you get me a birthday present!?” <br><br>He replies, “You didn’t use what I got you last year!”<br><br></p>
     </div>
     <div class="news-article">
         <h3>Even My Boss Gets PISSed</h3>
