added a href link to the jokes css file

--- a/birthdayPage.html
+++ b/birthdayPage.html
@@ -7,6 +7,7 @@
     <link href="css/header.css" rel="stylesheet">
     <link href="css/mainContent.css" rel="stylesheet">
     <link href="css/semi-bottom.css" rel="stylesheet">
+    <link href="css/jokesStyles.css" rel="stylesheet">
   </head>
   <body>
   
@@ -65,6 +66,35 @@
         <p>On my 21st birthday, a family friend who is an old lady invited me and my family to a dinner with her and her family, because by the Lunar calendar her birthday was on the same day as mine.<br><br> Her family and my parents can all speak Cantonese.<br><br> I cannot.<br><br> They decided to go to a seafood restaurant. I am allergic to most seafoods. I spent my 21st birthday sitting at a table full of people not saying anything and not eating anything, because I couldn't do either.<br><br><strong>Edit:</strong> I look back on it and laugh at the circumstances, but at the time it was a pretty long night.<br><br><strong>Re-Edit:</strong> BIRTHDAYS FUCKIN BLOW LOL</p>
     </div>
 </div>
+
+
+<div id="jokes-container">
+    <div id="jokesHead">
+        <h1>Jokes For A Day(a sPECIAL dAY)</h1>
+        <div class="jokesContent">
+            <ul>
+                <li class="alignLeft">I like birthdays, but I think too many can kill you.</li>
+                <li class="alignRight">Chinese kid was born before the due date. Parents named him Sudden Lee.</li>
+                <li class="alignLeft">Your so ugly when you were born your mom said "Oh what a treasure" and your dad said "Yeah let's bury it."</li>
+                <li class="alignRight">Your secrets are safe with me because I literally won't remember them. This also applies to your birthday. Your birthdays are safe with me.</li>
+                <li class="alignLeft">Why are birthday's good for you? Statistics show that the people who have the most live the longest!</li>
+                <li class="alignRight">If you feel a bit lonely, forgotten, or just need someone to cheer you up remember...You can always change your birthday on facebook!</li>
+                <li class="alignLeft">"Were any famous men born on your birthday?" "No, only little babies."</li>
+                <li class="alignRight">My birth certificate was a letter of apology that my dad got from the condom company…</li>
+            </ul>
+        </div>
+                
+    
+    </div>
+</div>
+
+
+
+
+
+
+
+
 
 
 <div id="semi-bottom">
